test/should-fail/vsgc2665.f3
/**
 * @test/compile-error
 */

class Z {
   var y : Integer
}
def zzz = Z {
   y: 1
   y: 2
   y: 3
}
